# mondis

./: .gitignore  Cargo.toml  PLAN.md  README.md
crates/mondis-core/: Cargo.toml
crates/mondis-core/src/: model.rs
crates/mondis-ddc/: Cargo.toml
crates/mondis-ddc/src/: lib.rs
crates/mondis-panel/: Cargo.toml
crates/mondis-panel-direct/: Cargo.toml
crates/mondis-panel-direct/src/: main.rs
crates/mondis-panel/src/: main.rs
crates/mondis-tray/: Cargo.toml
crates/mondis-tray/src/: main.rs
crates/mondis-x11/: Cargo.toml
crates/mondis-x11/src/: lib.rs
protocols/: 01-nulevoy-test-brightness.md  02-change-confirmation.md  03-gpu-display-improvements.md  04-monitor-details-cards.md  05-tray-quick-access.md  06-install-uninstall-scripts.md  07-tv-power-hdmi-dp.md  08-adjustable-parameters-panel.md
scripts/: install.sh  uninstall.sh
