[workspace]
members = [
    "crates/mondis-core",
    "crates/mondis-x11",
    "crates/mondis-ddc",
    "crates/mondis-panel",
    "crates/mondis-panel-direct",
    "crates/mondis-tray",
]
resolver = "2"
default-members = [
    "crates/mondis-core",
    "crates/mondis-x11",
    "crates/mondis-ddc",
]
